# codaro

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  goalNinePlusChecklist.md  launchKit.md  objectiveNinePlusScorecard.md  publicReadinessChecklist.md  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  launcher-release.yml  pages.yml  product-release.yml  publish.yaml  publish.yml  pypi-publish.yml  release-quality.yml  release-smoke.yml  security.yml
_archive/experiments/: 999_marimoFixture.py  marimo-layout.dom.html
_archive/marimo-spec/: PRD.md
assets/brand/: README.md
backend/prd/: 01-goal-rules-and-sources.md  04-websocket-and-message-protocol.md  09-configuration-system-and-cli.md
blog/: ASSET_POLICY.md  BLOG_STRUCTURE.md
contracts/: README.md  artifactOwners.yml  artifactOwnership.schema.json  classroomArchive.schema.json  classroomMigrationLedger.schema.json  imageArtifactDescriptor.schema.json  learningArchive.schema.json  learningArtifactDescriptor.schema.json  learningEvent.schema.json  masteryPolicy.v1.json  publicLearningCatalog.json  runRouteState.schema.json  tableArtifactDescriptor.schema.json
curricula/_misconceptions/: automation.excel.workbook.yml  automation.regex.yml  automation.webApi.get.yml  builtins.async.yml  builtins.contextManagers.yml  builtins.dataFormats.yml  builtins.datetime.yml  builtins.fileSystem.yml  builtins.numericMath.yml  builtins.textProcessing.yml  matplotlib.basics.yml  ml.intro.yml  numpy.arrayOps.yml  numpy.intro.yml  numpy.linearAlgebra.yml  pandas.aggregate.yml  pandas.filterSelect.yml  pandas.intro.yml  pandas.loadFrame.yml  pandas.merge.yml  pandas.timeSeries.yml  python.advancedSyntax.yml  python.controlFlow.yml  python.dataclasses.yml  python.dictsAndSets.yml  python.errorHandling.yml  python.functions.yml  python.intro.yml  python.lists.yml  python.modulesAndIo.yml  python.oop.yml  python.operators.yml  python.strings.yml  python.variables.yml
curricula/python/: DATASETS.md  PRINCIPLES.md  VARGUIDE.md  __init__.py  _taxonomy.yml  schema.yaml
demos/publicLaunch/: README.md  expenseSummaryDemo.py  fileOrganizerDemo.py  fiveMinuteQuickstart.md  sampleDownloads.csv  sampleExpenses.csv  socialCopy.md  teacherPromptCards.md  videoStoryboard.md
docs/blog/: ASSET_POLICY.md  BLOG.md  BLOG_STRUCTURE.md  README.md  TOPIC_ROADMAP.md
docs/branding/: README.md
docs/concepts/: block-model.md  execution-runtime.md
docs/getting-started/: first-notebook.md  installation.md
docs/guides/: local-server.md
docs/reference/: cli.md
docs/skills/: README.md
editor/: DEV.md  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
editor/public/: manifest.json  serviceWorker.js
editor/scripts/: generatePyprocAssets.mjs  splitApiDomains.mjs  splitCurriculumMarkdown.mjs  splitCurriculumSurface.mjs  splitTypeDomains.mjs  syncVisualAssets.mjs  verifyLearningArchiveState.mjs  verifyRunRouteState.mjs
editor/src/: App.tsx  app.html  index.css  main.tsx  styles.css  types.ts
editor/static/: sw.js
experiments/: 999_shellFixture.py
frontend/: DEV.md  PRD.md  package-lock.json  package.json  svelte.config.js
frontend/prd/: 01-goal-rules-and-sources.md  02-global-app-contract.md  03-workspace-chrome-contract.md  04-notebook-body-contract.md  05-floating-actions-save-recovery.md  06-settings-and-app-config.md  07-cell-editor-hover-output.md  08-footer-contract.md  09-feedback-health-and-auxiliary-ui.md  10-summary-acceptance-and-copy-plan.md
frontend/src/: app.html  styles.css
landing/: DEV.md  index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js  tsconfig.math-city.json  vite.config.js
landing/scripts/: auditSeo.mjs  cleanGeneratedSource.mjs  generateContent.js  generateCurriculum.js  generateOgImage.js  generatedManifest.json  lessonDiscovery.js  postbuild.js  prerenderReact.js  removeLegacySource.mjs  splitLandingRoutes.mjs  syncBlogAssets.js  syncBrand.js  syncPdfWorker.js  syncVisualAssets.js
landing/src/: App.jsx  app.css  app.html  main.jsx  styles.css
landing/static/: feed.xml  manifest.webmanifest  robots.txt
launcher/: Cargo.toml  PACKAGING.md  PRD.md
launcher/codaro-launcher/: Cargo.toml  build.rs
launcher/codaro-launcher/src/: autostart.rs  backend.rs  download.rs  failure.rs  github.rs  instance.rs  ipc.rs  main.rs  manifest.rs  paths.rs  provision.rs  self_update.rs  state.rs  tray.rs  webview.rs
launcher/codaro-launcher/src/generated_contracts/: artifact_ownership.rs  mod.rs
mainPlan/: PRD.md  README.md  completion-evidence.schema.yml  completion-transition-ledger.yml  completion-transition.schema.yml  curriculumCodeAudit.md
mainPlan/astryx-product-experience/: README.md
mainPlan/codaro-anywhere/: 00-product-vision.md  (+20 more)
productFrontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: buildBrandAssets.py
tests/: README.md  _predictStrictCategories.txt  _strongSignalCategories.txt  auditCurriculumExecutability.py  auditCurriculumWeakness.py  authorReferenceChecks.py  browserStaticServer.py  conftest.py  playwrightCli.py  run.py  testAdaptivePlanComposer.py  testAdaptiveSkip.py  testAiLiveSmoke.py  testAiProfile.py  testAiProvider.py  testAiSecrets.py  testAiTools.py  testAnalyticsTimeline.py  testAppRuntime.py  testArchitectureLayerContract.py  testAuditTrail.py  testAuthorReferenceChecks.py  testAutomation.py  testAutomationAuthoring.py  testAutomationInputPolicyFlow.py  testAutomationNotificationFlow.py  testAutomationTaskFlow.py  testAutomationVoiceFlow.py  testCheckProposer.py  testChecker.py  testCli.py  testCommandParser.py  testControlFlow.py  testConversation.py  testCurriculum.py  testCurriculumAnalyticsFlow.py  testCurriculumCatalogFlow.py  testCurriculumCheckFlow.py  testCurriculumContentFlow.py  testCurriculumGoalDiscoveryFlow.py  (+95 more)
(+3755 files in other folders)
