[project]
name = "codaro"
version = "0.0.7"
description = "Programmable studio — interactive editor runtime for code, learning, and automation"
readme = "README.md"
authors = [
    { name = "eddmpython", email = "206024502+eddmpython@users.noreply.github.com" }
]
requires-python = ">=3.12"
# Codaro는 PyPI에 배포하지 않는다. 유일한 배포 경로는 GitHub Releases의 release-manifest.json이
# 핀한 backend wheel을 Codaro.exe가 내려받아 설치하는 것이다. "Private :: Do Not Upload"
# 분류자는 twine/uv publish가 실수로 PyPI에 업로드하는 것을 거부하게 만든다.
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "fastapi>=0.135.1",
    # 학습 셀의 로컬-우선 자동완성 엔진. 순수 Python·오프라인이라 provider 없이도 즉시 동작한다.
    "jedi>=0.19.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.41.0",
    # 전역 터미널(에디터 하단 패널)의 백엔드 PTY. Windows는 ConPTY를 pywinpty로 띄우고,
    # POSIX는 표준 라이브러리 pty를 쓰므로 별도 의존성이 없다.
    "pywinpty>=2.0.13; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "watchdog>=6.0.0",
]
curriculum = [
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "polars>=1.41.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[project.scripts]
codaro = "codaro:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "BLE001",
    "S110",
    "S112",
    "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"src/codaro/runtime/localWorker.py" = ["BLE001", "S110"]
"src/codaro/outputDescriptor.py" = ["BLE001"]
"src/codaro/serverLog.py" = ["BLE001", "S110"]
"src/codaro/errorGuard.py" = ["BLE001"]

[tool.pytest.ini_options]
python_files = ["test*.py"]
addopts = "-p no:cacheprovider -o cache_dir=output/test-runner/.pytest_cache"
